--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
 
                     </div>
-                    <div class="col">
+                    <div class="col" style="margin-left: 10px;">
                         <p>Nothing is impossible to need hard work</p>
                     </div>
 
@@ -293,7 +293,7 @@
                     <div class="col col-lg-3">
                         <img height="50px" src="noting is impossible2.webp" alt="">
                     </div>
-                    <div class="col">
+                    <div class="col" style="margin-left: 10px;">
                         <p>Nothing is impossible to need hard work</p>
 
 
