--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,9 @@
             display: flex;
             align-items: center;
             color: black;
+            border-radius: 0.6rem;
+            font-weight: 600;
+            transition: background-color 0.5s ease;
         }
 
 
@@ -217,7 +220,7 @@
 
 
                     </div>
-                    <div class="col">
+                    <div class="col" style="margin-left: 10px;">
                         <p>Nothing is impossible to need hard work</p>
                     </div>
 
@@ -226,7 +229,7 @@
                     <div class="col col-lg-3">
                         <img height="50px" src="noting is impossible2.webp" alt="">
                     </div>
-                    <div class="col">
+                    <div class="col" style="margin-left: 10px;">
                         <p>Nothing is impossible to need hard work</p>
 
 
