--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
         .container-fluid2 {
             margin-top: 100px;
             background-color: rgb(0, 47, 61);
-            height: 267px;
+           padding: 20px;
             color: white;
         }
 
