--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         }
 
         .container-fluid1 {
-            background-image: url(college\ pic.webp);
+            background-image: url(colege\ pic.png);
             height: 100vh;
             background-repeat: no-repeat;
             width: 100%;
@@ -94,7 +94,7 @@
         .container-fluid2 {
             margin-top: 100px;
             background-color: rgb(0, 47, 61);
-            height: 267px;
+           padding: 20px;
             color: white;
         }
 
@@ -135,7 +135,7 @@
     </div>
 
     <div class="container-fluid1 ">
-        <div class="container" style="height: 780px;">
+        <div class="container" style="height: 80vh;">
 
         </div>
 
@@ -216,13 +216,13 @@
     <div class="container-fluid4 " style="margin-top: 100px;">
         <div class="container">
             <div class="row">
-                <div class="col ">
+                <div class="col   ">
                     <div class="row">
-                        <p style="margin: 50px;"><img class="rounded mx-auto d-block" height="400px" src="group pic.png"
+                        <p style="margin: 50px;"><img class="rounded mx-auto d-block" height="350px" src="group pic.png"
                                 alt="" srcset=""></p>
                     </div>
                 </div>
-                <div class="col align-self-end">
+                <div class="col  align-self-end">
                     <div class="row " style="margin: 70px; background-color: antiquewhite ;border-radius: 20px;">
                         <p>At GMIT, We’ve been able to develop our communication skills and learned how to work well
                             independently and on a team. With the support of our professors, We’ve been able to gain
