--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         .container-fluid1{
 
             background-image: url(contact.jpeg);
-            height: 300px;
+            height: 40vh;
         
             background-repeat: no-repeat;
             width: 100%;
@@ -76,7 +76,7 @@
         .container-fluid2 {
             margin-top: 100px;
             background-color: rgb(0, 47, 61);
-            height: 267px;
+            padding: 20px;
             color: white;
         }
 
@@ -87,13 +87,11 @@
 
         .container-fluid4 {
             background-color: azure;
-            height: 40vh;
+           padding: 35px;
         }
 
         .box {
-            height: 300px;
-            width: 40px;
-
+            padding: 40px;
             margin: 8px;
 
         }
@@ -166,7 +164,7 @@
             <h2 class="text-center">Custom Inqure Form</h2>
         </div>
         <div class="container">
-           <table >
+           <table style="margin: 30px;">
                 <td><input type="text" placeholder="Enter your Name"></td>
                 <td><input type="text" placeholder="Enter your Email"></td>
                 <td><input type="text" placeholder="Enter your Phone"></td>
@@ -174,7 +172,7 @@
            </table>
            <table>
             <tr>
-                <td><textarea name="" id="" cols="65" rows="8"></textarea></td>
+                <td><textarea name="" id="" cols="75" rows="8"></textarea></td>
             </tr>
            </table>
         </div>
