--- a/courses.html
+++ b/courses.html
@@ -72,7 +72,7 @@
         .container-fluid2 {
             margin-top: 100px;
             background-color: rgb(0, 47, 61);
-            height: 267px;
+            padding: 20px;
             color: white;
         }
 
@@ -82,7 +82,7 @@
         }
 
         .box {
-            height: 40vh;
+           padding: 20px;
             background-color: aliceblue;
             margin: 10px;
         }
