--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         .container-fluid1{
 
             background-image: url(contact.jpeg);
-            height: 40vh;
+            height: 300px;
         
             background-repeat: no-repeat;
             width: 100%;
