--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         .container-fluid1 {
             background-image: url(colege\ pic.png);
-            height: 100vh;
+            height: 400px;
             background-repeat: no-repeat;
             width: 100%;
             background-position: center;
