--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         .container-fluid1 {
             background-image: url(colege\ pic.png);
             
-           
+           height: 700PX;
             background-repeat: no-repeat;
             width: 100%;
             background-position: center;
